test: voucher Service & Repository Layer